# llvm-project

offload/: CMakeLists.txt
offload/include/: omptarget.h
offload/plugins-nextgen/common/include/: PluginInterface.h
offload/plugins-nextgen/host/src/: rtl.cpp
offload/plugins-nextgen/mpi/event_system/: EventSystem.cpp  EventSystem.h
offload/plugins-nextgen/mpi/src/: ProxyDevice.cpp  RemotePluginManager.h  rtl.cpp
offload/src/: PluginManager.cpp  omptarget.cpp
offload/test/: lit.cfg
offload/test/libc/: host_call.c
offload/test/mapping/: target_uses_allocator.c
offload/test/offloading/: struct_mapping_with_pointers.cpp
offload/test/sanitizer/: kernel_crash_async.c  kernel_trap.c
openmp/: CMakeLists.txt
openmp/libompfile/: CMakeLists.txt
openmp/libompfile/include/: file_interface.h
openmp/libompfile/src/: abstract_backend.h  debug_log.h  file_interface.cpp  io_uring_io_backend.cpp  io_uring_io_backend.h  mpi_io_backend.cpp  mpi_io_backend.h  posix_backend.cpp  posix_backend.h
openmp/runtime/src/: CMakeLists.txt  kmp.h  kmp_file.cpp  kmp_omp.h
openmp/runtime/src/include/: omp.h.var
